# ipytest

./: .coverage  .coveragerc  .gitignore  Changes.md  Example.ipynb  License.md  MANIFEST.in  Pipfile  Readme.in  Readme.md  make.py  minidoc.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py  tasks.py  x.py
.github/workflows/: release.yml  test.yml
example/: Example.ipynb  Magics.ipynb  PyTest.ipynb
ipytest/: __init__.py  __main__.py  _config.py  _impl.py  _pytest_support.py  _unittest_support.py  _util.py  cov.py  coverage_plugin.py  magics.py
tests/: .coveragerc  .gitignore  TestAsync.ipynb  TestAutoConfig.ipynb  TestCoverage.ipynb  TestDoctest.ipynb  TestDoctestIssue.ipynb  TestIntegration.ipynb  TestIssue101_Conftest.ipynb  TestIssue21_Doctests.ipynb  TestRaiseOnError.ipynb  TestTempfileFallback.ipynb  conftest.py  test_config.py  test_doctest.py  test_force_reload.py  test_ipytest.py  test_ipytest_cov.py  test_issue_71.py  test_pytest_support.py  test_raise_on_error.py  test_session.py
tests/TestCoverageWithConfig/: TestCoverage.ipynb  TestCoverageWarning.ipynb
tests/TestForceReload/: TestForceReload.ipynb
