[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ipytest"
version = "0.13.2"

authors = ["Christopher Prohm <mail@cprohm.de>"]

description = "Unit tests in IPython notebooks"
readme = "Readme.md"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.7, <4"

packaging = "*"
ipython = "*"
pytest = ">=5.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
nbval = "^0.10.0"
ruff = "^0.0.267"
pytest-asyncio = "^0.21.0"

[project.urls]
repository = "https://github.com/chmp/ipytest"

[tool.setuptools]
packages = ["ipytest"]

[tool.ruff]
select = [
    "E",
    "F",
    "I",
    "COM",
    "C4",
    "PT",
    "Q",
    "RET",
    "SIM",
    "ERA",
    "RUF",
]
ignore = ["E501", "SIM117"]
