[tool.poetry]
name = "ipytest"
version = "0.14.1"

authors = ["Christopher Prohm <mail@cprohm.de>"]

description = "Unit tests in IPython notebooks"
readme = "Readme.md"
license = "MIT"

include = ["License.md"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.8, <4"

packaging = "*"
ipython = "*"
pytest = ">=5.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
nbval = "^0.10.0"
ruff = "^0.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
build = "^1.0"
poetry = "^1.7"
poetry-plugin-export = "^1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/chmp/ipytest"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "COM",
    "C4",
    "PT",
    "Q",
    "RET",
    "SIM",
    "ERA",
    "RUF",
]

ignore = [
    "E501",
    "SIM117",
    # poetry uses a non-standard pyproject.toml format
    "RUF200",
    # trailing comma rule may conflict with the formatter
    "COM812",
    # wrong types in pytest.mark.parametrize
    "PT006",
]
