[project]
name = "ipytest"
version = "0.14.3b1"
requires-python = ">=3.9"

dependencies = [
    "packaging",
    "ipython",
    "pytest>=5.4",
]

maintainers = [
    { name = "Christopher Prohm", email = "mail@cprohm.de" },
]
authors = [
    { name = "Christopher Prohm", email = "mail@cprohm.de" },
]

description = "Unit tests in IPython notebooks"
readme = "Readme.md"
license = "MIT"

include = ["License.md"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/chmp/ipytest"

[dependency-groups]
dev = [
    "nbval~=0.11.0",
    "ruff~=0.9.0",
    "pytest-asyncio~=0.25.0",
    "pytest-cov~=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "COM",
    "C4",
    "PT",
    "Q",
    "RET",
    "SIM",
    "ERA",
    "RUF",
]

ignore = [
    "E501",
    "SIM117",
    # poetry uses a non-standard pyproject.toml format
    "RUF200",
    # trailing comma rule may conflict with the formatter
    "COM812",
    # wrong types in pytest.mark.parametrize
    "PT006",
    # commented code is used to configure ipytest
    "ERA001",
    # notebooks commonly redefine tests
    "F811",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
